# franka_joint_replay

./: .gitignore  CMakeLists.txt  README.md  franka_joint_replay_plugins.xml  package.xml
config/: joint_impedance_replay.yaml
include/franka_joint_replay/: joint_impedance_trajectory_controller.h
launch/: replay.launch  replay_gazebo.launch
scripts/: replay_lerobot_episode.py
src/: joint_impedance_trajectory_controller.cpp
